refactor: 메뉴 변경 여부 컬럼명 통일 (#274)
* feat: 메뉴 변경 확인 추가

* refactor: 테스트 수정

* feat: flyway 컬럼 추가

* refactor: V4에서 V5로 변경

* rename: V5에서 V6으로 변경

* refactor: 필드명 변경

* refactor: 필드명 변경