@@ -4,7 +4,6 @@ import static com.fasterxml.jackson.databind.PropertyNamingStrategies.SnakeCaseS
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
@@ -53,7 +52,10 @@ public record DiningResponse(
     LocalDateTime updatedAt,
 
     @Schema(description = "품절 여부", example = "true")
-    Boolean soldOut
+    Boolean soldOut,
+
+    @Schema(description = "메뉴 변경 여부", example = "true")
+    Boolean isChanged
 ) {
     public static DiningResponse from(Dining dining) {
         return new DiningResponse(
@@ -68,14 +70,15 @@ public record DiningResponse(
             dining.getImageUrl(),
             dining.getCreatedAt(),
             dining.getUpdatedAt(),
-            dining.getSoldOut()
+            dining.getSoldOut(),
+            dining.getIsChanged()
         );
     }
 
     public static List<String> toListMenus(String menu) {
         menu = menu.substring(1, menu.length() - 1);
         return Stream.of(menu.split(","))
-            .map(str -> str.trim().replaceAll("\"", ""))
-            .collect(Collectors.toList());
+            .map(str -> str.trim().replace("\"", ""))
+            .toList();
     }
 }
